--- a/gallery.css
+++ b/gallery.css
@@ -1,7 +1,7 @@
 /*
   Stylesheet - Gallery
-  Maian Recipe v2.0
-  CMotion Image Gallery- © Dynamic Drive DHTML code library (www.dynamicdrive.com)
+  Maian Recipe v3.0
+  CMotion Image Gallery- Â© Dynamic Drive DHTML code library (www.dynamicdrive.com)
 */  
 
 #motioncontainer {
